API add swagger product
